--- a/Form/templates/signUp.html
+++ b/Form/templates/signUp.html
@@ -13,7 +13,8 @@
         <h1>Registration Form</h1>
         <h3>DataFlair Django Tutorials</h3>
         <h2>{{ html }}</h2>
-        <form action = '' method="post">
+<!--        <form action ="{% url 'snippets:res' %}" method="post">-->
+        <form method="post">
             <!-- Very Important csrf Token -->
             {% csrf_token %}
         <table>
